argo-rollouts/canary-strategy/prod/preview-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-preview
spec:
  ports:
  - name: "80-8080"
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30201
  type: NodePort
