argo-rollouts/canary-strategy/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  ports:
  - name: "80-8080"
    port: 80
    protocol: TCP
    targetPort: 8080
    nodePort: 30200
  type: NodePort
